--- a/src/components/HomePage/homepage.css
+++ b/src/components/HomePage/homepage.css
@@ -2,6 +2,16 @@
   box-sizing: border-box;
 }
 
+.container-homepage {
+    display:flex;
+    flex-direction:column;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-left: 10vh;
+    margin-right: 10vh;
+    
+}
+
 .inventory-list {
   list-style: none;
   display: flex;
@@ -10,8 +20,27 @@
 }
 
 .item-tile {
+    display:flex;
+    flex-direction: column;
   height: 50vh;
-  width: 35vh;
+  width: 30vh;
+  text-align: center;
   /* border: 2px solid black; */
   margin: 5vh 10vh;
+}
+
+.item-tile h4 {
+    margin-bottom: 5px;
+    
+}
+
+.item-tile h5 {
+    margin-bottom: 8px;
+margin-top:0px;
+font-style: italic;
+font-weight: bold;
+}
+
+.details {
+    text-decoration: none;
 }
