--- a/src/components/OrderPage/orderpage.css
+++ b/src/components/OrderPage/orderpage.css
@@ -2,32 +2,28 @@
   display: flex;
   flex-direction: column;
   margin-top: 10vh;
-  justify-content: center;
-  align-items: center;
   text-align: center;
 }
 
 .order-list {
   list-style: none;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  align-items: center;
   border: solid 1px black;
-  width: 70%;
+  width: 50%;
 }
 
 .individual-order {
   display: flex;
-  margin: 1vh 2vh;
-  padding: 1vh 2vh;
+  margin: 1vh 1vh;
+  padding: 1vh 1vh;
   height: fit-content;
   list-style-type: none;
 }
 
-.right-cart h6 {
-  margin-top: 0vh;
-  margin-bottom: 0.5vh;
+.right-cart p {
+  font-size: small;
+  margin: 0px;
 }
 
 .right-cart h5 {
